# ISEE-DeepMar-attribute-recognition

./: CMakeLists.txt  Makefile  README.md
include/: isee_deepmar_attribute_recognition.hpp  jni_isee_deepmar_attribute_recognition.h
jni/: CMakeLists.txt  jni_isee_deepmar_attribute_recognition.cpp
src/: isee_deepmar_attribute_recognition.cpp
src/include/caffe/proto/: caffe.pb.h
